fixed dark mode css

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,13 +32,6 @@
   --appearance: #eae2d4;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
   -webkit-appearance: none;
